--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <div id="synth">
       <div id="displays">
         <div class="label">
-          <p>MIDI Display</p>
+          <p>MIDI</p>
           <div id="midi-display"></div>
         </div>
         <div class="label">
