added effects in synth engine

--- a/index.html
+++ b/index.html
@@ -53,6 +53,10 @@
           <p>Spectrogram</p>
           <div id="spectrogram"></div>
         </div>
+        <div class="label">
+          <p>Meter</p>
+          <div id="meter"></div>
+        </div>
       </div>
 
       <div id="dials">
@@ -105,8 +109,6 @@
       <div id="keyboard"></div>
     </div>
 
-
     <div id="footer"></div>
-    
   </body>
 </html>
