console intro in seperate module

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
       <div id="dials">
         <div>
-          <span id="dial1"></span>
+          <span id="dial1">Volume</span>
           <br />
           &nbsp; <span id="number1"></span>
         </div>
