volume label and backup

--- a/index.html
+++ b/index.html
@@ -60,8 +60,9 @@
       </div>
 
       <div id="dials">
-        <div>
-          <span id="dial1">Volume</span>
+        <div class="label">
+          <p>Volume</p>
+          <span id="dial1"></span>
           <br />
           &nbsp; <span id="number1"></span>
         </div>
