--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       </div>
 
       <div id="dials">
-        <div class="label">
+        <div class="label-center">
           <p>Volume</p>
           <span id="dial1"></span>
           <br />
