html organization, color consts and background

--- a/index.html
+++ b/index.html
@@ -37,8 +37,10 @@
   </head>
 
   <body>
+     <!-- Header -->
     <div id="header"></div>
 
+     <!-- Synthesizer -->
     <div id="synth">
       <div id="displays">
         <div class="label">
