--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
   </head>
 
   <body>
-     <!-- Header -->
+    <!-- Header -->
     <div id="header"></div>
 
-     <!-- Synthesizer -->
+    <!-- Synthesizer -->
     <div id="synth">
       <div id="displays">
         <div class="label">
@@ -61,6 +61,26 @@
         </div>
       </div>
 
+      <div id="synthesizer">
+        <div class="title">Synth</div>
+      </div>
+
+      <div id="modulation">
+        <div class="title">Modulation</div>
+      </div>
+
+      <div id="effects">
+        <div class="title">Effects</div>
+      </div>
+
+      <div id="keyboard"></div>
+    </div>
+
+    <div id="footer"></div>
+  </body>
+</html>
+
+<!--
       <div id="dials">
         <div class="label-center">
           <p>Volume</p>
@@ -107,11 +127,4 @@
         <span id="toggle1"></span>
         <span id="toggle2"></span>
         <span id="toggle3"></span>
-      </div>
-
-      <div id="keyboard"></div>
-    </div>
-
-    <div id="footer"></div>
-  </body>
-</html>
+      </div> -->
