--- a/index.html
+++ b/index.html
@@ -62,15 +62,23 @@
       </div>
 
       <div id="synthesizer">
-        <div class="title">Synth</div>
+        <div class="title"><h2>Synth</h2></div>
+        <div id="main">
+          <div class="label-center">
+            <p>Volume</p>
+            <span id="dial1"></span>
+            <br />
+            &nbsp; <span id="number1"></span>
+          </div>
+        </div>
       </div>
 
       <div id="modulation">
-        <div class="title">Modulation</div>
+        <div class="title"><h2>Modulation</h2></div>
       </div>
 
       <div id="effects">
-        <div class="title">Effects</div>
+        <div class="title"><h2>Effects</h2></div>
       </div>
 
       <div id="keyboard"></div>
