component styling and volume controls

--- a/index.html
+++ b/index.html
@@ -40,8 +40,10 @@
     <!-- Header -->
     <div id="header"></div>
 
-    <!-- Synthesizer -->
+    <!-- Main Panel -->
     <div id="synth">
+
+      <!-- Displays -->
       <div id="displays">
         <div class="label">
           <p>MIDI</p>
@@ -61,29 +63,34 @@
         </div>
       </div>
 
+      <!-- Synth Section -->
       <div id="synthesizer">
         <div class="title"><h2>Synth</h2></div>
         <div id="main">
-          <div class="label-center">
+          <div class="component">
             <p>Volume</p>
-            <span id="dial1"></span>
+            <div id="volume"></div>
             <br />
-            &nbsp; <span id="number1"></span>
+            <div id="volume-num"></div>
           </div>
         </div>
       </div>
 
+      <!-- Modulation  Section -->
       <div id="modulation">
         <div class="title"><h2>Modulation</h2></div>
       </div>
 
+      <!-- Effects  Section -->
       <div id="effects">
         <div class="title"><h2>Effects</h2></div>
       </div>
 
+      <!-- Keyboard -->
       <div id="keyboard"></div>
     </div>
 
+    <!-- Footer -->
     <div id="footer"></div>
   </body>
 </html>
