dark mode preliminary work, keyboard dynamic resizing preliminary work, main.js organization, index.html organization, scss organization

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
           <!-- Modulation Index -->
           <div class="component">
-            <p>Modulation Index</p>
+            <p>Mod Index</p>
             <div id="modulation-index"></div>
             <br />
             <div id="modulation-index-num"></div>
