html slider instead of NexusUI component for modulation index

--- a/index.html
+++ b/index.html
@@ -88,6 +88,11 @@
               <!-- Modulation Index -->
               <div class="component">
                 <p>Mod Index</p>
+
+                <div class="slidecontainer">
+                  <input type="range" min="0" max="300" value="0" class="slider" id="myRange">
+                </div>
+
                 <div id="modulation-index"></div>
                 <br />
                 <div id="modulation-index-num"></div>
@@ -102,6 +107,9 @@
               </div>
             </div>
             <div id="adsl-envelope">
+
+            
+
               <div class="component">
                 <p>Attack</p>
                 <div id="attack"></div>
