dark button font

--- a/index.html
+++ b/index.html
@@ -89,9 +89,9 @@
               <div class="component">
                 <p>Mod Index</p>
 
-                <div class="slidecontainer">
-                  <input type="range" min="0" max="300" value="0" class="slider" id="myRange">
-                </div>
+                
+                  <input type="range" min="0" max="300" value="0" class="slider" id="mod-index">
+                
 
                 <div id="modulation-index"></div>
                 <br />
