code cleanup for version 0.0.1

--- a/index.html
+++ b/index.html
@@ -128,14 +128,14 @@
               </div>
 
 
-              
+
             </div>
             <div id="adsl-envelope">
               <!--------------------------------------------------------------------->
               <!-- Attack-->
               <!--------------------------------------------------------------------->
               <div class="component">
-                <p>Attack</p>
+                <!-- <p>Attack</p> -->
                 <div id="attack"></div>
                 <br />
                 <div id="attack-num"></div>
