--- a/index.html
+++ b/index.html
@@ -65,24 +65,28 @@
           <!--------------------------------------------------------------------->
           <div id="synth-section">
             <div class="title" id="synth-title"><p>Synth</p></div>
-            <!--------------------------------------------------------------------->
-            <!-- Main -->
-            <!--------------------------------------------------------------------->
-            <div id="synth-section-main"></div>
+            <div id="synth-section-content">
+              <!--------------------------------------------------------------------->
+              <!-- Main -->
+              <!--------------------------------------------------------------------->
+              <div id="synth-section-main"></div>
 
-            <div id="adsl-envelope">
-              <!--------------------------------------------------------------------->
-              <!-- Attack-->
-              <!--------------------------------------------------------------------->
-              <div class="component">
-                <!-- <p>Attack</p> -->
-                <div id="attack"></div>
-                <br />
-                <div id="attack-num"></div>
+
+              
+              <div id="adsl-envelope">
+                <!--------------------------------------------------------------------->
+                <!-- Attack-->
+                <!--------------------------------------------------------------------->
+                <div class="component">
+                  <!-- <p>Attack</p> -->
+                  <div id="attack"></div>
+                  <br />
+                  <div id="attack-num"></div>
+                </div>
               </div>
-            </div>
-            <div id="envelopes">
-              <div id="envelope1"></div>
+              <div id="envelopes">
+                <div id="envelope1"></div>
+              </div>
             </div>
           </div>
 
