adsr envelope curves

--- a/index.html
+++ b/index.html
@@ -81,11 +81,11 @@
                 </div>
                 <div class="component">
                   <p class="label">Attack Curve</p>
-                  <div id=""></div>
+                  <div id="attack-curve"></div>
                   <p class="label">Decay Curve</p>
-                  <div id=""></div>
+                  <div id="decay-curve"></div>
                   <p class="label">Release Curve</p>
-                  <div id=""></div>
+                  <div id="release-curve"></div>
                 </div>
               </div>
               
