amplitude envelope styling

--- a/index.html
+++ b/index.html
@@ -71,24 +71,31 @@
               <!--------------------------------------------------------------------->
               <div id="synth-section-main"></div>
 
-
+              <!--------------------------------------------------------------------->
+              <!-- ADSR Envelope -->
+              <!--------------------------------------------------------------------->
               <p id="adsr-envelope-title" class="subtitle">Amplitude Envelope</p>
               <div id="adsr-envelope">
                 
                 <div class="component">
-                  <p class="label">ADSR</p>
+                  <p class="label">Attack &nbsp; Decay &nbsp; Sustain &nbsp; Release</p>
                   <div id="amplitude-adsr"></div>
                 </div>
                 <div class="component">
                   <p class="label">Attack Curve</p>
                   <div id="attack-curve"></div>
-                  <p class="label">Decay Curve</p>
+                  <p class="label list">Decay Curve</p>
                   <div id="decay-curve"></div>
-                  <p class="label">Release Curve</p>
+                  <p class="label list">Release Curve</p>
                   <div id="release-curve"></div>
                 </div>
               </div>
               
+              <!--------------------------------------------------------------------->
+
+              <!--------------------------------------------------------------------->
+              <p id="oscillator-title" class="subtitle">Oscillator</p>
+              <div id="oscillator"></div>
             </div>
           </div>
 
