--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
               <div id="adsr-envelope">
                 
                 <div class="component">
-                  <p class="label">Attack &nbsp; Decay &nbsp; Sustain &nbsp; Release</p>
+                  <p class="label">Attack &nbsp;&nbsp; Decay &nbsp;&nbsp; Sustain &nbsp;&nbsp; Release</p>
                   <div id="amplitude-adsr"></div>
                 </div>
                 <div class="component">
