package.json update

--- a/index.html
+++ b/index.html
@@ -72,27 +72,13 @@
               <div id="synth-section-main"></div>
 
               <!--------------------------------------------------------------------->
-              <!-- ADSR Envelope -->
+              <!-- Amplitude Envelope -->
               <!--------------------------------------------------------------------->
               <p id="adsr-envelope-title" class="subtitle">Amplitude Envelope</p>
-              <div id="adsr-envelope">
-                
-                <div class="component">
-                  <p class="label">Attack &nbsp;&nbsp; Decay &nbsp;&nbsp; Sustain &nbsp;&nbsp; Release</p>
-                  <div id="amplitude-adsr"></div>
-                </div>
-                <div class="component">
-                  <p class="label">Attack Curve</p>
-                  <div id="attack-curve"></div>
-                  <p class="label list">Decay Curve</p>
-                  <div id="decay-curve"></div>
-                  <p class="label list">Release Curve</p>
-                  <div id="release-curve"></div>
-                </div>
-              </div>
+              <div id="adsr-envelope"></div>
               
               <!--------------------------------------------------------------------->
-
+              <!-- Oscillator -->
               <!--------------------------------------------------------------------->
               <p id="oscillator-title" class="subtitle">Oscillator</p>
               <div id="oscillator"></div>
