jss.js index.js

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     ></script>
     <script src="https://cdn.jsdelivr.net/npm/nexusui@latest/dist/NexusUI.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/webmidi@next/dist/iife/webmidi.iife.js"></script>
-    <script type="module" src="./scripts/main.js"></script>
+    <script type="module" src="./scripts/jss.js"></script>
 
     <!--------------------------------------------------------------------->
     <!-- Icons and Styling -->
