--- a/index.html
+++ b/index.html
@@ -74,9 +74,11 @@
               <!--------------------------------------------------------------------->
               <!-- Amplitude Envelope -->
               <!--------------------------------------------------------------------->
-              <p id="adsr-envelope-title" class="subtitle">Amplitude Envelope</p>
+              <p id="adsr-envelope-title" class="subtitle">
+                Amplitude Envelope
+              </p>
               <div id="adsr-envelope"></div>
-              
+
               <!--------------------------------------------------------------------->
               <!-- Oscillator -->
               <!--------------------------------------------------------------------->
