oscillator type selector

--- a/index.html
+++ b/index.html
@@ -83,7 +83,20 @@
               <!-- Oscillator -->
               <!--------------------------------------------------------------------->
               <p id="oscillator-title" class="subtitle">Oscillator</p>
-              <div id="oscillator"></div>
+              <div id="oscillator">
+                <div class="component">
+                  <p class="label">Type</p>
+                  <div id="oscillator-type"></div>
+                  <br />
+                  <div class="selection">
+                    <div>sine</div>
+                    <div>square</div>
+                    <div>sawtooth</div>
+                    <div>triangle</div>
+                    <div>pulse</div>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
 
@@ -92,6 +105,9 @@
           <!--------------------------------------------------------------------->
           <div id="modulation">
             <div class="title"><p>Modulation</p></div>
+            <div id="modulation-content">
+              
+            </div>
           </div>
 
           <!--------------------------------------------------------------------->
@@ -99,6 +115,9 @@
           <!--------------------------------------------------------------------->
           <div id="effects">
             <div class="title"><p>Effects</p></div>
+            <div id="effects-content">
+
+            </div>
           </div>
         </div>
 
