show/hide addtional sections

--- a/index.html
+++ b/index.html
@@ -104,9 +104,9 @@
           <!-- Modulation  Section -->
           <!--------------------------------------------------------------------->
           <div id="modulation">
-            <div class="title"><p>Modulation</p></div>
+            <div class="title" id="modulation-title"><p>Modulation</p></div>
             <div id="modulation-content">
-              
+              <p>TEST</p>
             </div>
           </div>
 
@@ -114,9 +114,9 @@
           <!-- Effects  Section -->
           <!--------------------------------------------------------------------->
           <div id="effects">
-            <div class="title"><p>Effects</p></div>
+            <div class="title" id="effects-title"><p>Effects</p></div>
             <div id="effects-content">
-
+              <p>TEST</p>
             </div>
           </div>
         </div>
