added emplty title.js

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
           <div id="effects">
             <div class="title" id="effects-title"><p>Effects</p></div>
             <div id="effects-content">
-              <p>TEST</p>
+              <p>Various effects will be availble here.</p>
             </div>
           </div>
         </div>
