partials and count

--- a/index.html
+++ b/index.html
@@ -96,6 +96,14 @@
                     <div>pulse</div>
                   </div>
                 </div>
+                <div id="partial-count-section" class="component">
+                  <p class="label">Partial Count</p>
+                  <div id="partial-count"></div>
+                </div>
+                <div id="partials" >
+                  <div id="partials-selector"></div>
+                </div>
+                <div id="phase"></div>
               </div>
             </div>
           </div>
