partials section not working

--- a/index.html
+++ b/index.html
@@ -100,7 +100,8 @@
                   <p class="label">Partial Count</p>
                   <div id="partial-count"></div>
                 </div>
-                <div id="partials" >
+                <div id="partials-section" class="component">
+                  <p class="label">Partials</p>
                   <div id="partials-selector"></div>
                 </div>
                 <div id="phase"></div>
