--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
               <!--------------------------------------------------------------------->
               <p id="oscillator-title" class="subtitle">Oscillator</p>
               <div id="oscillator">
-                <div class="component">
+                <div id="type-selection" class="component">
                   <p class="label">Type</p>
                   <div id="oscillator-type"></div>
                   <br />
@@ -104,7 +104,6 @@
                   <p class="label">Partials</p>
                   <div id="partials-selector"></div>
                 </div>
-                <div id="phase"></div>
               </div>
             </div>
           </div>
@@ -127,6 +126,14 @@
                   <div>triangle</div>
                   <div>pulse</div>
                 </div>
+              </div>
+              <div id="modulation-partial-count-section" class="component">
+                <p class="label">Partial Count</p>
+                <div id="modulation-partial-count"></div>
+              </div>
+              <div id="modulation-partials-section" class="component">
+                <p class="label">Partials</p>
+                <div id="modulation-partials-selector"></div>
               </div>
               <!-- Modulation Envelope -->
               <p id="modulation-envelope-title" class="subtitle">
