oscillator and modulation modules

--- a/index.html
+++ b/index.html
@@ -70,7 +70,6 @@
               <!-- Main -->
               <!--------------------------------------------------------------------->
               <div id="synth-section-main"></div>
-
               <!--------------------------------------------------------------------->
               <!-- Amplitude Envelope -->
               <!--------------------------------------------------------------------->
@@ -78,33 +77,11 @@
                 Amplitude Envelope
               </p>
               <div id="adsr-envelope"></div>
-
               <!--------------------------------------------------------------------->
               <!-- Oscillator -->
               <!--------------------------------------------------------------------->
               <p id="oscillator-title" class="subtitle">Oscillator</p>
-              <div id="oscillator">
-                <div id="type-selection" class="component">
-                  <p class="label">Type</p>
-                  <div id="oscillator-type"></div>
-                  <br />
-                  <div class="selection">
-                    <div>sine</div>
-                    <div>square</div>
-                    <div>sawtooth</div>
-                    <div>triangle</div>
-                    <div>pulse</div>
-                  </div>
-                </div>
-                <div id="partial-count-section" class="component">
-                  <p class="label">Partial Count</p>
-                  <div id="partial-count"></div>
-                </div>
-                <div id="partials-section" class="component">
-                  <p class="label">Partials</p>
-                  <div id="partials-selector"></div>
-                </div>
-              </div>
+              <div id="oscillator"></div>
             </div>
           </div>
 
@@ -114,48 +91,17 @@
           <div id="modulation">
             <div class="title" id="modulation-title"><p>Modulation</p></div>
             <div id="modulation-content">
+              <!--------------------------------------------------------------------->
               <!-- Modulation Main -->
-              <div class="component">
-                <p class="label">Type</p>
-                <div id="modulation-type"></div>
-                <br />
-                <div class="selection">
-                  <div>sine</div>
-                  <div>square</div>
-                  <div>sawtooth</div>
-                  <div>triangle</div>
-                  <div>pulse</div>
-                </div>
-              </div>
-              <div id="modulation-partial-count-section" class="component">
-                <p class="label">Partial Count</p>
-                <div id="modulation-partial-count"></div>
-              </div>
-              <div id="modulation-partials-section" class="component">
-                <p class="label">Partials</p>
-                <div id="modulation-partials-selector"></div>
-              </div>
-              <!-- Modulation Envelope -->
+              <!--------------------------------------------------------------------->
+              <div id="modulation-section-main"></div>
+              <!--------------------------------------------------------------------->
+              <!-- MOdulation Envelope  -->
+              <!--------------------------------------------------------------------->
               <p id="modulation-envelope-title" class="subtitle">
                 Modulation Envelope
               </p>
-              <div id="modulation-envelope">
-                <div class="component">
-                  <p class="label">
-                    Attack &nbsp;&nbsp; Decay &nbsp;&nbsp; Sustain &nbsp;&nbsp;
-                    Release
-                  </p>
-                  <div id="modulation-adsr"></div>
-                </div>
-                <div class="component">
-                  <p class="label">Attack Curve</p>
-                  <div id="modulation-attack-curve"></div>
-                  <p class="label list">Decay Curve</p>
-                  <div id="modulation-decay-curve"></div>
-                  <p class="label list">Release Curve</p>
-                  <div id="modulation-release-curve"></div>
-                </div>
-              </div>
+              <div id="modulation-envelope"></div>
             </div>
           </div>
 
