added play stop fixed sequence

--- a/index.html
+++ b/index.html
@@ -117,6 +117,19 @@
         </div>
 
         <!--------------------------------------------------------------------->
+       <!-- Extra Controls (Presets, Sequencer etc.) -->
+        <!--------------------------------------------------------------------->
+        <div id="extras">
+          <div id="sequencer">
+            <button type="button" id="seq-play">▶</button>
+            <button type="button" id="seq-stop">■</button>
+          </div>
+          <!-- <div id="recorder">
+            <button type="button" id="rec">●</button>
+            <button type="button" id="rec-stop">■</button>
+          </div> -->
+        </div> 
+        <!--------------------------------------------------------------------->
         <!-- Keyboard -->
         <!--------------------------------------------------------------------->
         <div id="keyboard"></div>
