--- a/index.html
+++ b/index.html
@@ -117,20 +117,23 @@
         </div>
 
         <!--------------------------------------------------------------------->
-       <!-- Extra Controls (Presets, Sequencer etc.) -->
+        <!-- Extra Controls (Presets, Sequencer etc.) -->
         <!--------------------------------------------------------------------->
         <div id="extras">
           <div id="sequencer">
+            <input id="seq-rate" placeholder="Rate" value="1">
+            <input id="note-value" placeholder="Value" value="16n">
+            <input type="text" id="seq-input" placeholder="Enter sequence" />
+            <button type="button" id="seq-set">+</button>
             <button type="button" id="seq-play">▶</button>
             <button type="button" id="seq-stop">■</button>
           </div>
-          
+
           <!-- <div id="recorder">
             <button type="button" id="rec">●</button>
             <button type="button" id="rec-stop">■</button>
           </div> -->
-          
-        </div> 
+        </div>
         <!--------------------------------------------------------------------->
         <!-- Keyboard -->
         <!--------------------------------------------------------------------->
