sequencer buttons styling

--- a/index.html
+++ b/index.html
@@ -124,9 +124,9 @@
             <input id="seq-rate" placeholder="Rate" value="1">
             <input id="note-value" placeholder="Value" value="16n">
             <input type="text" id="seq-input" placeholder="Enter sequence" />
-            <button type="button" id="seq-set">+</button>
-            <button type="button" id="seq-play">▶</button>
-            <button type="button" id="seq-stop">■</button>
+            <button type="button" id="seq-set"><img src="./assets/icons/add.svg" alt=""></button>
+            <button type="button" id="seq-play"><img src="./assets/icons/play.svg" alt="""></button>
+            <button type="button" id="seq-stop"><img src="./assets/icons/stop.svg" alt=""></button>
           </div>
 
           <!-- <div id="recorder">
