--- a/index.html
+++ b/index.html
@@ -122,7 +122,18 @@
           <div id="effects">
             <div class="title" id="effects-title"><p>Effects</p></div>
             <div id="effects-content">
-              <p>Various effects will be availble here.</p>
+              <p id="-title" class="subtitle"></p>
+              <p id="-title" class="subtitle"></p>
+              <p id="-title" class="subtitle"></p>
+              <p id="-title" class="subtitle"></p>
+              <p id="-title" class="subtitle"></p>
+              <p id="-title" class="subtitle"></p>
+              <p id="-title" class="subtitle"></p>
+              <p id="-title" class="subtitle"></p>
+              <p id="-title" class="subtitle"></p>
+              <p id="-title" class="subtitle"></p>
+              <p id="-title" class="subtitle"></p>
+              <p id="vibrato-title" class="subtitle">Vibrato</p>
             </div>
           </div>
         </div>
