--- a/index.html
+++ b/index.html
@@ -122,18 +122,21 @@
           <div id="effects">
             <div class="title" id="effects-title"><p>Effects</p></div>
             <div id="effects-content">
-              <p id="-title" class="subtitle"></p>
-              <p id="-title" class="subtitle"></p>
-              <p id="-title" class="subtitle"></p>
-              <p id="-title" class="subtitle"></p>
-              <p id="-title" class="subtitle"></p>
-              <p id="-title" class="subtitle"></p>
-              <p id="-title" class="subtitle"></p>
-              <p id="-title" class="subtitle"></p>
-              <p id="-title" class="subtitle"></p>
-              <p id="-title" class="subtitle"></p>
-              <p id="-title" class="subtitle"></p>
+              <p id="filters-title" class="subtitle">Filters</p>
+              <p id="filter-1-title" class="subtitle">Filter 1</p>
+              <p id="filter-2-title" class="subtitle">Filter 2</p>
+              <p id="auto-filter-title" class="subtitle">Auto Filter</p>
+              <p id="delay-title" class="subtitle">Delay</p>
+              <p id="feedbackdelay-title" class="subtitle">Feedback Delay</p>
+              <p id="ping-pong-delay-title" class="subtitle">Ping Pong Delay</p>
+              <p id="chorus-title" class="subtitle">Chorus</p>
+              <p id="reverb-title" class="subtitle">Reverb</p>
+              <p id="tremolo-title" class="subtitle">Tremolo</p>
               <p id="vibrato-title" class="subtitle">Vibrato</p>
+              <p id="distortion-title" class="subtitle">Distortion</p>
+              <p id="freq-shifter-title" class="subtitle">Frequency Shifter</p>
+              <p id="bit-crusher-title" class="subtitle">Bit Crusher</p>
+              <p id="chebyshev-title" class="subtitle">Chebyshev</p>
             </div>
           </div>
         </div>
