--- a/index.html
+++ b/index.html
@@ -122,21 +122,86 @@
           <div id="effects">
             <div class="title" id="effects-title"><p>Effects</p></div>
             <div id="effects-content">
+              <!--------------------------------------------------------------------->
+              <!-- Filters -->
+              <!--------------------------------------------------------------------->
               <p id="filters-title" class="subtitle">Filters</p>
-              <p id="filter-1-title" class="subtitle">Filter 1</p>
-              <p id="filter-2-title" class="subtitle">Filter 2</p>
-              <p id="auto-filter-title" class="subtitle">Auto Filter</p>
+              <div id="filters-content">
+                <!--------------------------------------------------------------------->
+                <!-- Filter 1 -->
+                <!--------------------------------------------------------------------->
+                <p id="filter-1-title" class="subtitle">Filter 1</p>
+                <div id="filter-1-content"></div>
+
+                <!--------------------------------------------------------------------->
+                <!-- Filter 2 -->
+                <!--------------------------------------------------------------------->
+                <p id="filter-2-title" class="subtitle">Filter 2</p>
+                <div id="filter-2-content"></div>
+                <!--------------------------------------------------------------------->
+                <!-- Auto Filter -->
+                <!--------------------------------------------------------------------->
+                <p id="auto-filter-title" class="subtitle">Auto Filter</p>
+                <div id="auto-filter-content"></div>
+              </div>
+              <!--------------------------------------------------------------------->
+              <!-- Delay -->
+              <!--------------------------------------------------------------------->
               <p id="delay-title" class="subtitle">Delay</p>
-              <p id="feedbackdelay-title" class="subtitle">Feedback Delay</p>
-              <p id="ping-pong-delay-title" class="subtitle">Ping Pong Delay</p>
+              <div id="delay-content">
+                <!--------------------------------------------------------------------->
+                <!-- Feedback Delay -->
+                <!--------------------------------------------------------------------->
+                <p id="feedback-delay-title" class="subtitle">Feedback Delay</p>
+                <div id="feedback-delay-content"></div>
+                <!--------------------------------------------------------------------->
+                <!-- Ping Pong Delay -->
+                <!--------------------------------------------------------------------->
+                <p id="ping-pong-delay-title" class="subtitle">
+                  Ping Pong Delay
+                </p>
+                <div id="ping-pong-delay-content"></div>
+              </div>
+              <!--------------------------------------------------------------------->
+              <!-- Chorus -->
+              <!--------------------------------------------------------------------->
               <p id="chorus-title" class="subtitle">Chorus</p>
+              <div id="chorus-content"></div>
+              <!--------------------------------------------------------------------->
+              <!-- Reverb -->
+              <!--------------------------------------------------------------------->
               <p id="reverb-title" class="subtitle">Reverb</p>
+              <div id="reverb-content"></div>
+              <!--------------------------------------------------------------------->
+              <!-- Tremolo -->
+              <!--------------------------------------------------------------------->
               <p id="tremolo-title" class="subtitle">Tremolo</p>
+              <div id="tremolo-content"></div>
+              <!--------------------------------------------------------------------->
+              <!-- Vibrato -->
+              <!--------------------------------------------------------------------->
               <p id="vibrato-title" class="subtitle">Vibrato</p>
+              <div id="vibrato-content"></div>
+              <!--------------------------------------------------------------------->
+              <!-- Distortion -->
+              <!--------------------------------------------------------------------->
               <p id="distortion-title" class="subtitle">Distortion</p>
+              <div id="distortion-content"></div>
+              <!--------------------------------------------------------------------->
+              <!-- Frequency Shifter -->
+              <!--------------------------------------------------------------------->
               <p id="freq-shifter-title" class="subtitle">Frequency Shifter</p>
+              <div id="freq-shifter-content"></div>
+              <!--------------------------------------------------------------------->
+              <!-- Bit Crusher -->
+              <!--------------------------------------------------------------------->
               <p id="bit-crusher-title" class="subtitle">Bit Crusher</p>
+              <div id="bit-crusher-content"></div>
+              <!--------------------------------------------------------------------->
+              <!-- Chebyshev -->
+              <!--------------------------------------------------------------------->
               <p id="chebyshev-title" class="subtitle">Chebyshev</p>
+              <div id="chebyshev-content"></div>
             </div>
           </div>
         </div>
